...
    <string formatted="false" name="edit_option">edit…</string>

    <string formatted="false" name="confirm">Confirm</string>
    <string formatted="false" name="ignore">Ignore</string>
    <string formatted="false" name="cancel">Cancel</string>
...
    <string formatted="false" name="discard">Discard</string>

    <string formatted="false" name="next">Next</string>

    <string formatted="false" name="ok">OK</string>
...

    <!-- Dialog Errors -->
    <string formatted="false" name="name_already_exists">This name is already in use, please choose another one.</string>
    <string formatted="false" name="name_consists_of_spaces_only">You only put spaces into the text field, please enter a text
        using letters, numbers or other special characters.</string>
    <string formatted="false" name="name_empty">Please enter a text</string>

    <!-- Recycler View -->
...
    <string formatted="false" name="brick_context_dialog_copy_brick">Copy brick</string>
    <string formatted="false" name="brick_context_dialog_copy_script">Copy script</string>
    <string formatted="false" name="brick_context_dialog_formula_edit_brick">Edit formula</string>
    <string formatted="false" name="brick_context_dialog_delete_script">Delete script</string>
    <string formatted="false" name="brick_context_dialog_delete_definition">Delete this definition</string>
...
    <string formatted="false" name="categories">Categories</string>
    <string formatted="false" name="category_embroidery">Embroidery</string>
    <string formatted="false" name="category_motion">Motion</string>
    <string formatted="false" name="category_looks">Looks</string>
    <string formatted="false" name="category_pen">Pen</string>
...
    <string formatted="false" name="category_sound">Sound</string>
    <string formatted="false" name="category_control">Control</string>
    <string formatted="false" name="category_event">Event</string>
    <string formatted="false" name="category_user_bricks">Your bricks</string>
    <string formatted="false" name="category_data">Data</string>
    <string formatted="false" name="category_device">Device</string>
...
    <string formatted="false" name="brick_user_defined_add_label_description">Add label for this brick:</string>

    <string formatted="false" name="brick_user_defined_default_input_name">Name of input</string>
    <string formatted="false" name="brick_user_defined_default_label">Label text</string>

    <string formatted="false" name="brick_user_defined_already_exists">A brick with these labels already exists. Please add more labels or inputs.</string>

    <string formatted="false" name="brick_user_defined_script_define">Define</string>
    <string formatted="false" name="brick_user_defined_script_screen_refresh_as">screen refresh as</string>
    <string formatted="false" name="brick_user_defined_with_screen_refreshing">with</string>
    <string formatted="false" name="brick_user_defined_without_screen_refreshing">without</string>

...
    <string formatted="false" name="y_label">"y:"</string>
    <string formatted="false" name="brick_set_x">"Set x to"</string>
    <string formatted="false" name="brick_set_y">"Set y to"</string>
    <string formatted="false" name="brick_change_x_by">"Change x by"</string>
    <string formatted="false" name="brick_change_y_by">"Change y by"</string>
...

    <!-- Control bricks -->
    <string formatted="false" name="brick_when_started">When scene starts</string>
    <string formatted="false" name="brick_when">When tapped</string>
    <string formatted="false" name="brick_when_condition_when">When</string>
...
    <string formatted="false" name="formula_editor_function_object_with_id_visible">object with ID visible</string>
    <string formatted="false" name="formula_editor_intro_title_formula_editor">Formula editor</string>
    <string formatted="false" name="formula_editor_intro_summary_formula_editor">With the formula editor you can create mathematical and
        logical formulas that you can use in your bricks.\n\nContinue by tapping “NEXT” or exit
        with “SKIP”.
...

    <!-- Snackbar hints -->
    <string formatted="false" name="got_it">Got it</string>
    <string formatted="false" name="preference_description_hints">Enable to show hints</string>
    <string formatted="false" name="preference_title_enable_hints">Show hints </string>
    <string formatted="false" name="hint_category">All bricks are sorted in categories. Choose the category you are looking for.</string>
    <string formatted="false" name="hint_bricks">To add a brick to your script, tap on the brick you want to use.</string>
    <string formatted="false" name="hint_scripts">The script defines the behavior of your actor or object. To add bricks to the script,
        tap the \"+\" symbol.</string>
    <string formatted="false" name="hint_looks">Here you can find the different appearances of your actor or object. To add a new look,
        tap the \"+\" symbol.</string>
    <string formatted="false" name="hint_sounds">Here you can add new sounds to your actor or object. Remember using a brick from the
        sound category.</string>
    <string formatted="false" name="hint_objects">Your program consists of different actors and objects that can interact with each other.
...
