...
        <TextView
            style="@style/BrickText.SingleLine"
            android:text="@string/brick_set_x">
        </TextView>

        <TextView
            android:id="@+id/brick_set_x_edit_text"
            style="@style/BrickEditText">
        </TextView>
    </com.myradev.lunarcode.ui.BrickLayout>

</LinearLayout>
